--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -20,6 +20,7 @@ include $(top_srcdir)/paths.am
 nobase_distconf_SCRIPTS = \
 	$(wildcard scripts/*.sh) \
 	scripts/functions
+	scripts/README
 
 distconf_DATA = \
 	default \
