--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -14,7 +14,7 @@ VERBOSE=0
 DISK_QUOTA=yes
 VZFASTBOOT=no
 
-# The name of the device whose ip address will be used as source ip for VE.
+# The name of the device whose IP address will be used as source IP for CT.
 # By default automatically assigned.
 #VE_ROUTE_SRC_DEV="eth0"
 
@@ -24,7 +24,7 @@ NEIGHBOUR_DEVS=detect
 ## Template parameters
 TEMPLATE=/vz/template
 
-## Defaults for VEs
+## Defaults for containers
 VE_ROOT=/vz/root/$VEID
 VE_PRIVATE=/vz/private/$VEID
 CONFIGFILE="vps.basic"
