--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -136,7 +136,7 @@ stop_net() {
 start_ve() {
 	local veid velist msg need_restart=""
 
-	# get all VEs we should start on boot
+	# get all containers we should start on boot
 	if ! cd ${VPSCONFDIR}; then
 		eerror $? "Unable to cd to ${VPSCONFDIR}"
 		return 1
@@ -147,7 +147,7 @@ start_ve() {
 	/sbin/sysctl -q -w net.ipv4.route.src_check=0
 
 	for veid in ${velist}; do
-		ebegin "Starting VE ${veid}"
+		ebegin "Starting CT ${veid}"
 		if [ "${VZFASTBOOT}" = "yes" -a "${DISK_QUOTA}" = "yes" ]; then
 			${VZQUOTA} stat ${veid} >/dev/null 2>&1
 			if [ $? -eq 6 ]; then
@@ -162,16 +162,16 @@ start_ve() {
 	done
 
 	for veid in ${need_restart}; do
-		ebegin "Stopping VE ${veid}"
+		ebegin "Stopping CT ${veid}"
 		msg=$(${VZCTL} stop ${veid})
 		eend $? "${msg}"
 
-		ebegin "Starting VE ${veid}"
+		ebegin "Starting CT ${veid}"
 		msg=$($VZCTL start ${veid} 2>&1)
 		eend $? "${msg}"
 	done
 
-	# we're ok even if some VEs failed to start
+	# we're ok even if some CTs failed to start
 	return 0
 }
 
@@ -194,9 +194,9 @@ stop_ve() {
 			pids=
 			velist=$(awk '$1 != "VEID" && $1 != "Version:" {print $1}' ${VESTAT})
 			for veid in ${velist}; do
-				ebegin "Shutting down VE $veid"
+				ebegin "Shutting down CT $veid"
 				# Set fairsched parameters to maximum so
-				# VE will stop fast
+				# CT will stop fast
 				${VZCTL} set ${veid} --cpuunits 2000 --cpulimit 0 >/dev/null 2>&1
 				${VZCTL} --skiplock stop ${veid} >/dev/null 2>&1 &
 				pids="${pids} $!"
@@ -224,7 +224,7 @@ stop_ve() {
 		mounts=$(awk '{if ($3=="simfs") print $2}' /proc/mounts)
 
 		for m in ${mounts}; do
-			ebegin "Unmounting VE area ${m}"
+			ebegin "Unmounting CT area ${m}"
 			msg=$(umount ${m} 2>&1)
 			eend $? "${msg}"
 			if [ $? -ne 0 ]; then
@@ -240,7 +240,7 @@ stop_ve() {
 	quota=$(awk -F: '/^[0-9]+:/{print $1}' /proc/vz/vzquota 2>/dev/null)
 
 	for m in ${quota}; do
-		ebegin "Turning quota off for VE ${m}"
+		ebegin "Turning quota off for CT ${m}"
 		msg=$(vzquota off ${m} 2>&1)
 		eend $? "${msg}"
 	done
