--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -97,8 +97,8 @@ fi
 
 VEINFO=""
 RETVAL=0
-# Number of the parallel VEs on stop.
-# In case empty value the number of parallel VEs calculated as 'num_cpu * 4'
+# Number of the containers to stop in parallel.
+# In case of empty value the number of CTs is calculated as 'num_cpu * 4'
 PARALLEL=
 cd /
 
@@ -293,7 +293,7 @@ start_net()
 {
 	local mod
 
-	# load all kernel modules needed for VE networking
+	# load all kernel modules needed for containers networking
 	for mod in ${NET_MODULES}; do
 		modprobe ${mod} 2>/dev/null
 	done
@@ -373,7 +373,7 @@ start_ves()
 	sysctl -q -w net.ipv4.route.src_check=0
 	for veid in $velist; do
 		[ "${veid}" = "0" ] && continue
-		__echo "Starting VE ${veid}: "
+		__echo "Starting CT ${veid}: "
 		if [ "x${VZFASTBOOT}" = "xyes" -a "x${DISK_QUOTA}" = "xyes" ];
 		then
 			$VZQUOTA stat ${veid} >/dev/null 2>&1
@@ -388,10 +388,10 @@ start_ves()
 		print_result "$msg"
 	done
 	for veid in ${need_restart}; do
-		__echo "Stopping VE ${veid}: "
+		__echo "Stopping CT ${veid}: "
 		$VZCTL stop ${veid} 2>&1 >/dev/null 2>&1
 		print_result "$msg"
-		__echo "Starting VE ${veid}: "
+		__echo "Starting CT ${veid}: "
 		msg=`$VZCTL start ${veid} 2>&1`
 		print_result "$msg"
 	done
@@ -416,9 +416,9 @@ stop_ves()
 			pids=
 			velist=`awk '$1 != "VEID" && $1 != "Version:" {print $1}' ${VESTAT}`
 			for veid in $velist; do
-				echo "Shutting down VE $veid"
+				echo "Shutting down CT $veid"
 				# Set fairsched parameters to maximum so
-				# VE will stop fast
+				# CT will stop fast
 				$VZCTL set $veid --cpuunits 2000 --cpulimit 0 >/dev/null 2>&1
 				$VZCTL --skiplock stop $veid >/dev/null 2>&1 &
 				pids="$pids $!"
@@ -442,7 +442,7 @@ stop_ves()
 		fail=0
 		mounts=`awk '{if ($3=="simfs") print $2}' /proc/mounts`
 		for m in $mounts; do
-			__echo "Unmounting VE area "
+			__echo "Unmounting CT area "
 			echo -n $m
 			msg=`umount $m 2>&1`
 			if [ $? -eq 0 ]; then
@@ -458,7 +458,7 @@ stop_ves()
 	# turn quota off
 	quota=`awk -F: '/^[0-9]+:/{print $1}' /proc/vz/vzquota 2>/dev/null`
 	for m in ${quota}; do
-		__echo "Turn quota off for VE "
+		__echo "Turn quota off for CT "
 		echo -n $m
 		msg=`vzquota off ${m} 2>&1`
 		print_result "$msg"
