--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -108,7 +108,7 @@ vzgetnetdev()
 	}' | sed -e 's/:$//' -e 's/@.*$//'`
 }
 
-# Find neighbour interfaces for a given VE IP.
+# Find neighbour interfaces for a given CT IP.
 # Make sure to source @PKGCONFDIR@/vz.conf before calling this,
 # in order to get the value of $NEIGHBOUR_DEVS from it.
 vz_get_neighbour_devs()
