--- a/scripts/vps-net_add.in
+++ b/scripts/vps-net_add.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,15 +16,15 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# This script setup routing for given VE.
+# This script setup routing for given CT.
 #
 # Parameters are passed in environment variables.
 # Required parameters:
-#   VEID          - VE id
+#   VEID          - CT id
 # Optional parameters:
 #   IP_ADDR       - IP address(es) to add
 #                   (several addresses should be divided by space)
-#   VE_STATE      - state of VE; could be one of:
+#   VE_STATE      - state of CT; could be one of:
 #                     starting | stopping | running | stopped
 . @PKGCONFDIR@/vz.conf
 . @PKGLIBDIR@/scripts/vps-functions
