--- a/scripts/vps-net_del.in
+++ b/scripts/vps-net_del.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,14 +16,14 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# This script removes routing for given VE.
+# This script removes routing for given CT.
 #
 # Parameters are passed in environment variables.
 # Required parameters:
 #   IP_ADDR       - IPs to delete, several addresses should be divided by space
-#   VEID          - VE id
+#   VEID          - CT id
 # Optional parameters:
-#   VE_STATE      - state of VE; could be one of:
+#   VE_STATE      - state of CT; could be one of:
 #                     starting | stopping | running | stopped
 
 . @PKGCONFDIR@/vz.conf
