--- a/scripts/vps-stop.in
+++ b/scripts/vps-stop.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,12 +16,12 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# This script does clean up after VE shutdown
+# This script does clean up after CT shutdown
 #
 # Parameters are passed in environment variables.
 # Required parameters:
-#   VEID    - VE id
-#   IP_ADDR - VE IP address(es) divided by spaces
+#   VEID    - CT id
+#   IP_ADDR - CT IP address(es) divided by spaces
 
 . @PKGCONFDIR@/vz.conf
 . @PKGLIBDIR@/scripts/vps-functions
