--- a/scripts/vpsreboot.in
+++ b/scripts/vpsreboot.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2007 SWsoft. All rights reserved.
+#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,7 +16,7 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# Script to start VE was rebooted
+# Script to start CT was rebooted
 #
 
 VZCONF=@PKGCONFDIR@/vz.conf
@@ -45,7 +45,7 @@ check_reboot()
 	[ "$allowreboot" = 'no' ] && return
 	if [ -f "$ve_root/$REBOOT_MARK" ]; then
 		[ -z "$LOGFILE" ] ||
-			echo "`date --iso-8601=seconds` vereboot : VE $veid : reboot " >> "$LOGFILE"
+			echo "`date --iso-8601=seconds` vereboot : CT $veid : reboot " >> "$LOGFILE"
 		@SBINDIR@/vzctl start "$veid" >/dev/null 2>&1
 	fi
 }
