scripts/*: fix comments
This is a missing part from commit 0154b000e527d2608b6b3d8f7b5b441cc997c5db

It fixes comments in scripts:
* Better, more clear descriptions of scripts
* Remove references to non-existent man pages
* CT -> container in some cases
* Fixed VE_STATE description (can not be 'stopped')

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -16,8 +16,7 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# This script should create CT private area
-# For usage info see vz-create_prvt(5) man page.
+# Create container's private area.
 #
 # Parameters are passed in environment variables.
 # Required parameters:
