vz-net_add: fix a long-standing bug processing the list of network interfaces
Before commit 1cb8182a5e3cbc697996bca4445384764281c572, function
vz_get_local_dev (which is now vz_get_neighbour_devs) was called to get
the list of interfaces to send APR requests on, and the caller checked
its return code. Now that check is no more, which revealed the following bug.

vz_get_neighbour_devs use vzwarning to print a warning in case $NETDEVICES
is empty. When it's not empty, it should print a list of interfaces. The
problem is vzwarning also prints to stdout, which can lead to this
bacchanalia of warnings and errors:

 # vzctl set 101 --ipadd 10.0.0.101 --save
 Adding IP address(es): 10.0.0.101
 arpsend: unknown iface vps-net_add : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 vps-net_add FAILED
 arpsend: unknown iface WARNING: : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 WARNING: FAILED
 arpsend: unknown iface Device : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 Device FAILED
 arpsend: unknown iface list : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 list FAILED
 arpsend: unknown iface is : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 is FAILED
 arpsend: unknown iface empty : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -D -e 10.0.0.101 empty FAILED
 arpsend: unknown iface vps-net_add : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -U -i 10.0.0.101 -e 10.0.0.101 vps-net_add FAILED
 arpsend: unknown iface WARNING: : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -U -i 10.0.0.101 -e 10.0.0.101 WARNING: FAILED
 arpsend: unknown iface Device : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -U -i 10.0.0.101 -e 10.0.0.101 Device FAILED
 arpsend: unknown iface list : No such device
 vps-net_add WARNING: arpsend -c 1 -w 1 -U -i 10.0.0.101 -e 10.0.0.101 list FAILED
 arpsend: unknown iface is : No such device
 vps-

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -17,6 +17,7 @@
 #
 #
 # Common stuff for vzctl helper scripts
+
 # get the name of the script
 SELFNAME="${0##*/}"
 
@@ -47,9 +48,9 @@ IP_CMD=/sbin/ip
 #   vzerror "Fatal error" 1
 vzerror()
 {
-	# print errors to stdout too
+	# print errors to stderr too
 	ERR=$?
-	echo "$SELFNAME ERROR: $1"
+	echo "$SELFNAME ERROR: $1" 1>&2
 	exit $2
 }
 
@@ -60,7 +61,7 @@ vzerror()
 #   vzwarning Invalid user
 vzwarning()
 {
-	echo "$SELFNAME WARNING: $*"
+	echo "$SELFNAME WARNING: $*" 1>&2
 }
 
 # Prints debug message
@@ -70,7 +71,7 @@ vzwarning()
 #   vzdebug Trying to start ls
 vzdebug()
 {
-	echo "$SELFNAME: $*"
+	echo "$SELFNAME: $*" 1>&2
 }
 
 # Checks if environment variable exists,
