--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -55,10 +55,9 @@
 
 
 ACT_SCRIPTS_SFX="start stop mount umount"
-SSH_OPTIONS=""
-SSH="ssh $SSH_OPTIONS"
-SCP_OPTIONS=""
-SCP="scp $SCP_OPTIONS"
+# blowfish is a fast block cipher, much faster then 3des
+SSH_OPTIONS="-c blowfish"
+SCP_OPTIONS=$SSH_OPTIONS
 RSYNC_OPTIONS="-aH --delete --numeric-ids"
 RSYNC="rsync $RSYNC_OPTIONS"
 
@@ -276,9 +275,7 @@ while [ ! -z "$1" ]; do
 		;;
 	--ssh=*)
 		SSH_OPTIONS="$SSH_OPTIONS $(echo $1 | cut -c7-)"
-		SSH="ssh $SSH_OPTIONS"
 		SCP_OPTIONS="`echo $SSH_OPTIONS | sed 's/-p/-P/1'`"
-		SCP="scp $SCP_OPTIONS"
 		;;
 	*)
 		break
@@ -286,6 +283,10 @@ while [ ! -z "$1" ]; do
 	esac
 	shift
 done
+
+SSH="ssh $SSH_OPTIONS"
+SCP="scp $SCP_OPTIONS"
+export RSYNC_RSH=$SSH
 
 host=$1
 shift
