vznetcfg: "source" sh statement doesn't work with debian dash
I think that you missing to remove the source command when you convert to pure
Bourne shell script syntax. Perhaps you should use the dot.

I receive this error :

[..]
Configure veth devices: veth101.0
/usr/sbin/vznetcfg: 20: source: not found
VE start in progress...

http://bugzilla.openvz.org/894

--- a/bin/vznetcfg.in
+++ b/bin/vznetcfg.in
@@ -17,7 +17,7 @@
 #
 VZNETCFG='@PKGCONFDIR@/vznet.conf'
 
-[ -f "$VZNETCFG" ] && source "$VZNETCFG"
+[ -f "$VZNETCFG" ] && . "$VZNETCFG"
 
 usage()
 {
