init.d/vz-redhat: improve kernel version extraction
From http://bugzilla.openvz.org/834:

I'm using above mentioned package. When installing it I stumbled across
the following error message:

> Installing new version of config file /etc/vz/vz.conf ...
> /etc/init.d/vz: line 192: test: 18+openvz: integer expression expected

I'm using a self-compiled kernel with the following version number:

> # uname -r
> 2.6.18+openvz

When parsing the version no. in /etc/init.d/vz we therefore have:

> KERNEL_PATCHLEVEL=18+openvz

As a consequence the following (numeric!) test fails with above
mentioned error message:

> test "${KERNEL_PATCHLEVEL}" -gt 9

The following patch in get_kernel_version() solves this problem

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -174,7 +174,7 @@ get_kernel_version()
 	[ ! -z "$KERNEL_MAJOR" ] && return
 
 	local ver=$(uname -r)
-	local kernel=$(echo $ver | sed s/-.*//)
+	local kernel=$(echo $ver | sed s/[-+].*//)
 	KERNEL_MAJOR=$(echo $kernel | awk -F . '{print $1}')
 	KERNEL_MINOR=$(echo $kernel | awk -F . '{print $2}')
 	KERNEL_PATCHLEVEL=$(echo $kernel | awk -F . '{print $3}')
