vpsreboot: fix occasional error printing
occasionally and pretty annoying vpsreboot reports via cron:

cat: /var/lock/vereboot.lock: No such file or directory

obviously sometimes the LOCKFILE goes away so we do ignore even the situation
if cat fails - I have not yet any clue if there are bad sideffects coming up.

--- a/scripts/vpsreboot.in
+++ b/scripts/vpsreboot.in
@@ -58,7 +58,7 @@ lockfile()
 		rm -f "$tmpfile"
 		return
 	fi
-	if kill -0 `cat $LOCKFILE` 2>/dev/null; then
+	if kill -0 `cat $LOCKFILE 2>/dev/null` 2>/dev/null; then
 		rm -f "$tmpfile"
 		exit
 	fi
