Add vznetaddbr script

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -18,7 +18,8 @@
 sbin_SCRIPTS = vzcpucheck \
                vzmigrate \
                vznetcfg \
-               vzpid
+               vzpid \
+               vznetaddbr
 
 EXTRA_DIST=$(sbin_SCRIPTS:%=%.in)
 
