--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -37,7 +37,7 @@ ARCH_VER      = 0.7 0.8
 CENTOS_VER    = 3 4
 DEBIAN_VER    = 3.0 3.1 4.0
 FC_VER        = 1 2 3 4 5 6 7
-FEDORA_VER    = 7 8
+FEDORA_VER    = 7 8 9
 REDHAT_7x_VER = 7.0 7.1 7.2 7.3
 REDHAT_VER    = 8.0 9
 RHEL_VER      = 3 4
