Fix a typo in bash_completion script.
This prevented completing CT names on stop/enter/exec commands.

http://bugzilla.openvz.org/show_bug.cgi?id=962
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=479797

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -21,7 +21,7 @@ _get_ves()
 		stop|enter|exec*)
 			# running CTs
 			@SBINDIR@/vzlist -H -oveid
-			@SBINDIR@/vzlist -H -oname | $rm_emtpy
+			@SBINDIR@/vzlist -H -oname | $rm_empty
 			;;
 		*)
 			# All CTs
