--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -111,7 +111,7 @@ _vzctl()
 			--ostemplate)
 				# get the template path from the vz.conf
 				local vztmpl=`grep ^TEMPLATE @PKGCONFDIR@/vz.conf | cut -d "=" -f 2`
-				COMPREPLY=( $( compgen -W "$(ls -1 $vztmpl/cache/*.tar.gz |
+				COMPREPLY=( $( compgen -W "$(command ls -1 $vztmpl/cache/*.tar.gz |
 						    sed -e "s#^$vztmpl/cache/##" -e 's#.tar.gz$##')" -- $cur ) )
 
 				;;
@@ -122,7 +122,7 @@ _vzctl()
 				COMPREPLY=( $( compgen -W "restart ignore" -- $cur ) )
 				;;
 			--config|--applyconfig)
-				local configs=$(ls -1 @PKGCONFDIR@/conf/*.conf-sample |
+				local configs=$(command ls -1 @PKGCONFDIR@/conf/*.conf-sample |
 						    cut -d "-" -f 2- | sed -e 's#.conf-sample$##')
 
 				configs=${configs/.conf-sample/}
