bin/vznetaddbr.in: fix to work with bash >= 3.2
bin/vznetaddbr.in: fix to work with bash >= 3.2

Bash-3.2 changed the behavior of the [[ command's `=~' operator when the
right-hand side was quoted: it matched the quoted portions as strings.

--- a/bin/vznetaddbr.in
+++ b/bin/vznetaddbr.in
@@ -21,16 +21,16 @@ for tmp in $IFACES; do
     NETIF_OPTIONS=$(echo $tmp | sed 's/,/\n/g')
     for str in $NETIF_OPTIONS; do 
         # getting 'ifname' parameter value
-        if [[ "$str" =~ "^ifname=" ]]; then
+        if [[ "$str" =~ ^ifname= ]]; then
             # remove the parameter name from the string (along with '=')
 	    CTIFNAME=${str#*=}
         fi
-        if [[ "$str" =~ "^bridge=" ]]; then
+        if [[ "$str" =~ ^bridge= ]]; then
             # remove the parameter name from the string (along with '=')
 	    CTBRIDGE=${str#*=}
         fi
         # getting 'host_ifname' parameter value
-        if [[ "$str" =~ "^host_ifname=" ]]; then
+        if [[ "$str" =~ ^host_ifname= ]]; then
             # remove the parameter name from the string (along with '=')
 	    VZHOSTIF=${str#*=}
         fi
