vzctl: doesn't start in runlevel 4 (by LSB headers)
The startup script /etc/init.d/vz is not executed in runlevel 4. It is a
common practice on Debian to start the services in runlevels 2345 and
stop it in runlevels 016. This patch should be enough.

http://bugs.debian.org/493206

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -27,8 +27,8 @@
 # Provides: vz
 # required-start: $network $remote_fs $local_fs sshd
 # required-stop:
-# Default-Start: 2 3 5
-# Default-Stop:
+# Default-Start: 2 3 4 5
+# Default-Stop: 0 1 6
 # Short-Description: OpenVZ startup script
 # Description: OpenVZ startup script.
 ### END INIT INFO
