--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -30,7 +30,7 @@ TEMPLATE=/vz/template
 ## Defaults for containers
 VE_ROOT=/vz/root/$VEID
 VE_PRIVATE=/vz/private/$VEID
-CONFIGFILE="vps.basic"
+CONFIGFILE="basic"
 DEF_OSTEMPLATE="fedora-core-4"
 
 ## Load vzwdog module
