--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -134,6 +134,11 @@ start_net() {
 	ebegin "Configuring interface ${VZDEV}"
 		/sbin/sysctl -q -w net.ipv4.conf.${VZDEV}.send_redirects=0
 	eend $?
+
+	if [ "x$(/sbin/sysctl net.ipv4.ip_forward 2>/dev/null | awk '{print $3}')" = "x0" ]; then
+		ewarn "It looks like you have ip forwarding disabled. To make networking"
+		ewarn "available for containers, please, run sysctl -w net.ipv4.ip_forward=1"
+	fi
 }
 
 stop_net() {
