vznetaddbr.in: Fix interface initialization
Closes http://bugzilla.openvz.org/show_bug.cgi?id=1089
Closes http://bugzilla.altlinux.org/show_bug.cgi?id=19546

Patch-by: Dmitry Lebkov <dlebkov@altlinux.org>
Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>

--- a/bin/vznetaddbr.in
+++ b/bin/vznetaddbr.in
@@ -30,7 +30,7 @@ for iface in $NETIFLIST; do
 	bridge=vmbr0
 
     echo "Adding interface $host_ifname to bridge $bridge on CT0 for CT$VEID"
-    ip addr add 0 dev "$host_ifname"
+    ip link set dev "$host_ifname" up
     echo 1 >"/proc/sys/net/ipv4/conf/$host_ifname/proxy_arp"
     echo 1 >"/proc/sys/net/ipv4/conf/$host_ifname/forwarding"
     brctl addif "$bridge" "$host_ifname"
