vz.conf: let centos-5 be default template
fedora-core-4 is waay too old

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -31,7 +31,7 @@ TEMPLATE=/vz/template
 VE_ROOT=/vz/root/$VEID
 VE_PRIVATE=/vz/private/$VEID
 CONFIGFILE="basic"
-DEF_OSTEMPLATE="fedora-core-4"
+DEF_OSTEMPLATE="centos-5"
 
 ## Load vzwdog module
 VZWDOG="no"
