Do not miss IPv6-only interfaces
If a network interface doesn't contain any ipv4 address assigned,
then vzgetnetdev() function doesn't add this interface to NETDEVICES.

Fix the regex by adding an optional "6" after "inet",
so now we look for both "inet" and "inet6".

[kir@openvz.org: changelog, fix the regex to not match inet66]

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -103,7 +103,7 @@ vzgetnetdev()
 	/^[0-9]+/ && /UP/ && !/LOOPBACK/ && !/SLAVE/ && !/NOARP/ {
 		dev=$2;
 	}
-	/^[\ \t]+inet / {
+	/^[\ \t]+inet6? / {
 		if (dev != "") print (dev);
 		dev="";
 	}' | sed -e 's/:$//' -e 's/@.*$//'`
