Fix large CT checkpointing: use open64() and friends
Do that by adding -D_FILE_OFFSET_BITS=64 to CFLAGS

Test case:
* create and start a container
* create a large (>2G) file in it
* in container, run a program that
** opens the file
** unlinks it
** sleeps
* run vzctl chkpnt CTID

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -69,6 +69,7 @@ AC_C_INLINE
 # Compiler settings
 CFLAGS="${CFLAGS} -Wall -Wpointer-arith -Wcast-qual -Winline"
 CFLAGS="${CFLAGS} -Wcast-align -Wno-unused-parameter"
+CFLAGS="${CFLAGS} -D_FILE_OFFSET_BITS=64"
 
 if test x$build_cpu = xppc64 -o x$build_cpu = xpowerpc64; then
 	CFLAGS="${CFLAGS} -m64"
