--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -25,8 +25,10 @@
 
 ### BEGIN INIT INFO
 # Provides: vz
-# required-start: $network $remote_fs $local_fs sshd
-# required-stop:
+# required-start: $network $remote_fs $syslog
+# required-stop:  $network $remote_fs $syslog
+# Should-Start:  sshd
+# Should-Stop:  sshd
 # Default-Start: 2 3 4 5
 # Default-Stop: 0 1 6
 # Short-Description: OpenVZ startup script
