--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -26,6 +26,7 @@ man_MANS = arpsend.8 \
            vzmemcheck.8 \
            vzmigrate.8 \
            vzpid.8 \
-           vzsplit.8
+           vzsplit.8 \
+           vzifup-post.8
 
 EXTRA_DIST = $(man_MANS)
