--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -30,6 +30,7 @@ vzcheckvar VE_PRVT PRIVATE_TEMPLATE
 create_prvt()
 {
 	local TMP AVAIL NEEDED HEADER OPT
+	local TAR_OPT="--numeric-owner"
 
 	[ -d "$VE_PRVT" ] ||
 		vzerror "Destination directory does not exist: $VE_PRVT" ${VZ_FS_NEW_VE_PRVT}
