init.d/vz-redhat: do not add junk files to a cronjob
Commit 00a5a95c02c05e0070a1dd10b47c90b3715c9ff5 introduced
handling of multiple cron files. The problem is there can
be some unwanted files in SRC_CRONSCRIPT_DIR
(like e.g. vz.rpmnew) which should be ignored.

Do this, using is_ignored_file() shell function from Red Hat's
/etc/init.d/function. In case it's not defined (this is probably
the case for SUSE and Debian/Ubuntu) use own own copy.

Issue reported by Igor Sviridov <sia@23andme.com>.
http://bugzilla.openvz.org/1043

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -126,14 +126,31 @@ check_old_cron_files()
 	done
 }
 
+if ! type is_ignored_file >/dev/null 2>&1; then
+	is_ignored_file() {
+		case "$1" in
+		    *~ | *.bak | *.orig | *.rpmnew | *.rpmorig | *.rpmsave)
+			return 0
+			;;
+		esac
+		return 1
+	}
+fi
+
 setup_cron()
 {
+	local f ch
+
 	check_old_cron_files
 	[ -z "$SRC_CRONSCRIPT_DIR" ] && return
 	[ -d "$SRC_CRONSCRIPT_DIR" ] || return
 	[ -d "$DST_CRONSCRIPT_DIR" ] || return
-	cat $SRC_CRONSCRIPT_DIR/vz* > $DST_CRONSCRIPT_DIR/vz &&
-		chmod 644 $DST_CRONSCRIPT_DIR/vz
+	for f in $SRC_CRONSCRIPT_DIR/vz*; do
+		if ! is_ignored_file $f; then
+			cat $f > $DST_CRONSCRIPT_DIR/vz && ch=yes
+		fi
+	done
+	[ $ch = 'yes' ] && chmod 644 $DST_CRONSCRIPT_DIR/vz
 }
 
 remove_cron()
