configure.ac: add -Wextra to CFLAGS
It catches things such as

	unsigned int i;
	...
	if (i < 0)

that are left unnoticed otherwise.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -72,7 +72,7 @@ AC_C_INLINE
 # Checks for library functions.
 
 # Compiler settings
-CFLAGS="${CFLAGS} -Wall -Wpointer-arith -Wcast-qual -Winline"
+CFLAGS="${CFLAGS} -Wall -Wpointer-arith -Wcast-qual -Winline -Wextra"
 CFLAGS="${CFLAGS} -Wcast-align -Wno-unused-parameter"
 CFLAGS="${CFLAGS} -D_FILE_OFFSET_BITS=64"
 
